OpenAlea.Deploy 0.4.2
    * Add <alea_upload> command (GForge upload)
    * Add gforge module (SOAP communication)
    * Fix dyn-lib bug with virtual env
OpenAlea.Deploy 0.4.1
    * Fix bug with <develop> command and namespaces
OpenAlea.Deploy 0.4.0
    * Improve <develop> command : manage namespace and environment variables
    * Reinstall shared libraries if they are missing (but not egm)
    * Add shell command : alea_clean, alea_config and alea_update
    * Based on setuptools-0.6c8
OpenAlea.Deploy 0.3.8
    * Adapt develop command for lib_dir and bin_dir
OpenAlea.Deploy 0.3.7
    * Simplify the warning message for environment variable on Linux
OpenAlea.Deploy 0.3.6
    * add get_recommended_pkg functions
OpenAlea.Deploy 0.3.5
    * add alea_clean and alea_update_all scritps
OpenAlea.Deploy 0.3.4a
    * Fix platform detection for darwin
OpenAlea.Deploy 0.3.3
    * Execute build_ext before build_py
OpenAlea.Deploy 0.3.2
    * Manage a list of web repository
OpenAlea.Deploy 0.3
    * Manage a directory of shared lib
    